Qf: potential fix to the dialog becoming invisible (#4603)
* qf: remove transparent window background from win

Because it seems to still sometimes cause the qf window
to disappear. I could not reproduce it but disabling
background: transparent did help with the issue of qf
disappearing in the past. It allows us to remove very
specific chromemargins which, apparently, do not work
in all cases.

Removed border-radius from qf on windows because now that
the window is not transparent, its corners would be visible.
But the window itself has rounded corners so it doesn't look
that different.

The main drawback now is that a secondary window without titlebar
on win becomes resizable, and having background: transparent was
a workaround to disable that. So now, we set max width and height
so that the window cannot be stretched but, unfortunately, the
resize cursor appears when you hover over the edge of the dialog.

* qf: minor style fixes

- hardcode light theme value for accept button and the
spinner so they don't disappear when the theme is dark
- make sure the item's color from reference panel is not
overriden by a lighter one from another stylesheet

--- a/chrome/skin/default/zotero/integration.css
+++ b/chrome/skin/default/zotero/integration.css
@@ -222,7 +222,16 @@ span.zotero-bubble-input {
 
 .citation-dialog .accept-button {
 	list-style-image: url("chrome://zotero/skin/20/universal/arrow-right.svg");
-	fill: currentColor;
+	fill: #0000008c; /* hardcoded fill-secondary from light theme */
+}
+
+.citation-dialog .accept-button:hover {
+	background-color: #0000000d; /* hardcoded fill-quinary from light theme */
+}
+
+.zotero-spinner-16 {
+	fill: #0000008c; /* hardcoded fill-secondary from light theme */
+	background: url("chrome://zotero/skin/16/light/loading.svg") no-repeat center/contain;
 }
 
 .citation-dialog.item {
@@ -250,7 +259,7 @@ span.zotero-bubble-input {
 
 richlistitem[selected="true"] {
 	background: Highlight !important;
-	color: HighlightText;
+	color: HighlightText !important;
 }
 
 .citation-dialog.reference-panel {
@@ -366,7 +375,8 @@ panel button .button-text {
 }
 
 window.citation-dialog {
-	width: 600px;
+	max-width: 800px;
+	min-width: 800px;
 }
 
 .aria-hidden {
